fix: modify mapper to retrieve toTaxCode or fromTaxCode